[project]
name = "ast-parse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer>=3.4.6",
    "pydantic>=2.12.5",
    "tree-sitter>=0.25.2",
    "tree-sitter-cpp>=0.23.4",
]

[[tool.uv.index]]
url = "https://artsz.zte.com.cn/artifactory/api/pypi/public-pypi-virtual/simple"
default = true
